Change of Blogs to "Tips & Guidelines"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="refer">Refer</string>
     <string name="capture_moment">Capture Moment</string>
     <string name="expected_outcomes">Expected Outcomes</string>
-    <string name="blogs">Blogs</string>
+    <string name="blogs">Tips &amp; Guidelines</string>
     <string name="webinars">Webinars</string>
     <string name="not_now">Not Now</string>
     <string name="a_c_holder">A/C Holder:</string>
