Details Page Fixed and Activity Podcast Added

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -158,6 +158,8 @@
 
     <string name="baby_age_req">बच्चे की आयु * </string>
 
+    <string name="activity_podcast"></string>
+
     <string name="session_by"> द्वारा सत्र </string>
 
     <string name="session_date">सत्र की तारीख </string>
