--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -6,6 +6,8 @@
 
     <string name="do_s">करने योग्य </string>
 
+    <string name="activity_podcast"></string>
+
     <string name="dont_s">न करने योग्य </string>
 
     <string name="ideal_weight">आदर्श वजन </string>
