--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,7 +355,7 @@
     <string name="general">General</string>
     <string name="user_section">User section</string>
     <string name="my_referrals">My referrals</string>
-
+    <string name="activity_podcast"> Activity Podcast</string>
     <string name="welcome">Welcome </string>
     <string name="landscape_not_allowed">Landscape not allowed</string>
     <string name="months">" months"</string>
@@ -368,6 +368,8 @@
     <string name="go_back" translatable="false">go back</string>
     <string name="activity_sample">Activity Sample</string>
     <string name="no_data" translatable="false">No Data</string>
+
+    <!--Activity Podcast-->
 
 
 </resources>
