MemoryBooster and Resources page added notification completed

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -7,6 +7,9 @@
     <string name="do_s">करने योग्य </string>
 
     <string name="activity_podcast"></string>
+    <string name="memory_booster"></string>
+
+
 
     <string name="dont_s">न करने योग्य </string>
 
