--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -371,5 +371,12 @@
 
     <!--Activity Podcast-->
 
+    <!--Memory Booster-->
+    <string name="memory_booster">Memory Booster</string>
+
+    <!--Resource Files-->
+
+
+
 
 </resources>
