--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -160,6 +160,8 @@
 
     <string name="activity_podcast"></string>
 
+    <string name="memory_booster"></string>
+
     <string name="session_by"> द्वारा सत्र </string>
 
     <string name="session_date">सत्र की तारीख </string>
