--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -603,6 +603,8 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="hey">अरे, </string>
 
     <string name="babyMonthsFormat">बच्चा "%d" महीनों का है</string>
+    <string name="babyYearFormat">Baby is  %d year "%d" months old</string>
+    <string name="babyAgePrenatal">Baby is not yet born</string>
 
     <string name="daily">रोज </string>
 
@@ -670,4 +672,5 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="np_question_baby_minutes">How many minutes a day can you give for your baby\'s development?</string>
     <string name="np_question_baby_toys_special_needs">Any Special needs you have around your baby\'s development?</string>
     <string name="np_question_baby_major_objective">What is the major objective to join this program?</string>
+    <string name="p_note_reffer">Note-Offer only applicable if your rfferal joins premium any of programs</string>
 </resources>
