Added DataStore and custom_progress_bar_layout.xml in status:Successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="wrong_email">Please,Enter the Correct Email</string>
     <string name="wrong_password">Please,Enter the Correct Password</string>
     <string name="wrong_phone">Please,Enter the Correct Phone Number</string>
+    <string name="pleas_wait">Please, Wait</string>
 </resources>
