Added Phone Authentication for Forget Users status:Successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="pleas_wait">Please, Wait</string>
     <string name="Exception_one">The out of band code is invalid. This can happen if the code is malformed, expired, or has already been used.</string>
     <string name="Exception_two">Given String is empty or null</string>
+    <string name="Miss_request">User Request is Denied!!,Try To Create New Account</string>
 </resources>
