Added Layout for User Add Course status:Successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,10 @@
     <string name="user_udi">Udi:</string>
     <string name="user_token">Token:</string>
 
+    <!-- User Add -->
+    <string name="payment_Option_1">UnPaid</string>
+    <string name="payment_Option_2">Paid</string>
+    <string name="add_cou">Add Course</string>
+    <string name="add_del">Removed</string>
+
 </resources>
