--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,11 +72,15 @@
     <!-- Custom Dialog-->
     <string name="user_udi">Udi:</string>
     <string name="user_token">Token:</string>
-
+    <!-- See User App Users-->
+    <string name="all_usr">All Users</string>
     <!-- User Add -->
     <string name="payment_Option_1">UnPaid</string>
     <string name="payment_Option_2">Paid</string>
     <string name="add_cou">Add Course</string>
-    <string name="add_del">Removed</string>
+    <string name="add_del">Removed Course</string>
+    <string name="add_usr"> Add Users</string>
+    <string name="newUser_usr">New Unpaid Account Create ?</string>
+    <string name="old_usr">Old Unpaid Account</string>
 
 </resources>
