Removed Add User Paid Or unPaid Bug status:Successfully

--- a/hackerstudent/src/main/res/values/strings.xml
+++ b/hackerstudent/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
 
     <!-- Course Item-->
     <string name="course_thumb">Course Thumbnail</string>
+    <string name="btn_retry">Retry</string>
+    <string name="error_text">UnAble to Load More.</string>
 </resources>
