All Course Preview Feature status:Successfully

--- a/hackerstudent/src/main/res/values/strings.xml
+++ b/hackerstudent/src/main/res/values/strings.xml
@@ -56,4 +56,13 @@
     <string name="search_hint">Enter Course Name</string>
     <string name="we_found_part_1">We found</string>
     <string name="we_found_part_2">course available for you</string>
+
+
+    <!--Course Preview -->
+    <string name="course_created">Created By -</string>
+    <string name="lang_type">Hindi , English</string>
+    <string name="COURSE_by_btn">Buy now</string>
+    <string name="course_add_cart_btn">Add To Cart</string>
+    <string name="course_review_btn">See More Reviews</string>
+
 </resources>
