Added Video View Feature status:Successfully

--- a/hackerstudent/src/main/res/values/strings.xml
+++ b/hackerstudent/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="course_created">Created By -</string>
     <string name="lang_type">Hindi , English</string>
     <string name="COURSE_by_btn">Buy now</string>
-    <string name="COURSE_preview">This a Preview</string>
+    <string name="COURSE_preview">Preview this Video</string>
     <string name="course_add_cart_btn">Add To Cart</string>
     <string name="course_review_btn">See More Reviews</string>
 
