--- a/hackerstudent/src/main/res/values/strings.xml
+++ b/hackerstudent/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <!-- My Course Fragment -->
     <string name="frag_course_my">My Subscription</string>
     <string name="frag_sub">Subscription</string>
+    <string name="ass_btn">View Assignment File</string>
     <string name="frag_desc">Great Day! What would you \nlike to learn today?</string>
 
 </resources>
