Added Review feature status:Successfully

--- a/hackerstudent/src/main/res/values/strings.xml
+++ b/hackerstudent/src/main/res/values/strings.xml
@@ -80,5 +80,6 @@
     <string name="frag_cart">Wishlist</string>
     <!-- Splash Activity-->
     <string name="Splash_screen">PERMISSION_DENIED: Missing or insufficient permissions.</string>
+    <string name="review_tab">Review Tab</string>
 
 </resources>
