--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,5 @@
     <string name="add_usr"> Add Users</string>
     <string name="newUser_usr">New Unpaid Account Create ?</string>
     <string name="old_usr">Old Unpaid Account</string>
-
+    <string name="Splash_screen">PERMISSION_DENIED: Missing or insufficient permissions.</string>
 </resources>
