Changed App Logo status:Successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HackingWork</string>
+    <string name="app_name">Tech Admin</string>
     <!-- App String -->
     <string name="app_tag">Log Out</string>
     <string name="app_login">Login Screen.</string>
