--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="doctor_referral_guide">Doctor Referral Guide</string>
     <string name="doctor_brochure">Doctor Brochure</string>
     <string name="resources">Resources</string>
-    <string translatable="false" name="tutorial">Tutorial</string>
+    <string translatable="false" name="tutorial">App tutorials</string>
     <string name="all_activities">All Routines</string>
     <string name="essentialsAlarmDescription">Essentials Alarms are scheduled for first and second Monday, and the last Saturday and Sunday of the month</string>
     <string name="monthlyAlarmDescription">Monthly Alarms are scheduled for first and second Monday, and the last Saturday and Sunday of the month</string>
@@ -414,7 +414,7 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="screen_routine" translatable="false">This section will keep getting customised, it\'s for parents just to form Right Habits. You already might be doing 60% of it but purpose is to together achieve 100% </string>
     <string name="screen_session" translatable="false">This section will have NEW sessions added by your expert regularly on important training and awareness for you</string>
     <string name="screen_podcast" translatable="false">This section will have activities evolved from research works fit for your child’s development, regularly your expert will add new activities for you</string>
-    <string name="screen_music" translatable="false">These are special research based musics for your child, to boost neural connections</string>
+    <string name="screen_music" translatable="false">1.These are special research based musics for your child, to boost neural connections\n2.Scroll horizontal to explore more </string>
     <string name="screen_booster" translatable="false">This is a section to help child enhance learning, new boosters will keep getting added by your expert after research works for you at regular basis</string>
     <string name="screen_support" translatable="false">Click on Support for general queries and expert for any question you have for your expert</string>
 </resources>
