--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -366,7 +366,7 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="we_ll_play_this_for">We\'ll play this for </string>
     <string name="minutes"> minutes.</string>
     <string name="sending_data">Sending Data…</string>
-    <string name="general">General</string>
+    <string name="general">Miscellaneous Tools</string>
     <string name="user_section">User section</string>
     <string name="my_referrals">My referrals</string>
     <string name="activity_podcast"> Activity Podcast</string>
