Question form added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -419,4 +419,5 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="screen_music" translatable="false">1.These are special research based musics for your child, to boost neural connections\n2.Scroll horizontal to explore more </string>
     <string name="screen_booster" translatable="false">This is a section to help child enhance learning, new boosters will keep getting added by your expert after research works for you at regular basis</string>
     <string name="screen_support" translatable="false">Click on Support for general queries and expert for any question you have for your expert</string>
+    <string name="tips_will_be_added_soon_to_r_d_team_will_add_the_report_soon"><![CDATA[Tips will be added soon to R&D team will add the report soon]]></string>
 </resources>
