Added the Todos Navigation is remedies is status:Successfully

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -659,6 +659,7 @@ reach you out within 24-48 hours to start your onboarding</string>
     <string name="language_text">भाषा</string>
 
     <string name="activity_sample" >गतिविधि नमूना</string>
+    <string name="activity_remedies" >उपचार</string>
 
     <!--Non premium forms-->
     <string name="np_next">Next</string>
